Fix reaction spacing and input color

--- a/static/assets/css/global.css
+++ b/static/assets/css/global.css
@@ -21,6 +21,7 @@
     --background-color: #333;
     --transparent-background-color: #333a;
     --color: #fff;
+    --light-color: #d7d7d7;
   }
 }
 
@@ -142,11 +143,13 @@ input::placeholder, textarea::placeholder {
 
 label {
   font-weight: bold;
-    padding: initial
+  padding: initial;
 }
 
 input, textarea {
   padding: 1em;
+  background-color: transparent;
+  color: inherit;
 }
 
 input[type="checkbox"] {
